# Perception_Systems

./: README.md
edges_detector/: CMakeLists.txt
edges_detector/src/: edge_detector.cpp
face_detect/: CMakeLists.txt
face_detect/information/: bibliography
face_detect/src/: face_detection_LBP_video.cpp  face_detection_LBP_webcam.cpp  face_detection_haar_video.cpp  face_detection_haar_video_hat_moustache.cpp  face_detection_haar_webcam.cpp  face_detection_haar_webcam_hat_moustache.cpp  face_detection_plus_video.cpp  face_detection_plus_webcam.cpp
fw_detect/: CMakeLists.txt
fw_detect/src/: face_detector_webcam.cpp
histogram/: .README.md.swp  CMakeLists.txt  README.md
histogram/src/: histogram.cpp
test_online/face_detect_online/: CMakeLists.txt
test_online/face_detect_online/src/: face_detector_onlinee.cpp
webcam_capture/src/: webcam_capture.cpp
webcam_circles/: CMakeLists.txt  README.md
webcam_circles/src/: .circle_detector.cpp.swp  circle_detector.cpp  mod_circle_detector.cpp
webcam_color_detector/: CMakeLists.txt
webcam_color_detector/src/: color_detector.cpp
webcam_diferent/: CMakeLists.txt
webcam_diferent/src/: circle_detector.cpp
webcam_outline/: CMakeLists.txt
webcam_outline/src/: outline_detector.cpp
webcam_point_features/: README.md
webcam_point_features/src/: mod_point_features.cpp  point_features.cpp
